# LyricLabel

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  summary.md
.github/workflows/: docs_drift.yml
docs/: architecture.md  configuration.md  development.md  usage.md
lyriclabel/: config.py  edit_metadata.py  fetch_metadata.py  logger.py  logging_config.py  main.py  meta_edit.py  meta_fetcher.py  parser.py  utils.py
lyriclabel/utils/: parser.py
