[project]
name = "lyriclabel"
version = "0.1.0"
description = "Fetch and embed Last.fm metadata into MP3 files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mutagen>=1.46.0",
  "python-dotenv>=1.1.0",
  "requests>=2.28.1",
]

[project.scripts]
lyriclabel = "lyriclabel.main:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "ruff>=0.6.0",
  "types-requests>=2.32.0",
]

[dependency-groups]
dev = [
  "mypy>=1.11.0",
  "ruff>=0.6.0",
  "types-requests>=2.32.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
